# -2.-

./: .gitignore  README.md  pyproject.toml
src/: abstract_classes.py  hh.py  json_saver.py  main.py  vacancy.py
tests/: test_json_saver.py  test_vacancy.py
